--- a/package.json
+++ b/package.json
@@ -106,8 +106,8 @@
   ],
   "scripts": {
     "vscode:prepublish": "bun run package",
-    "download-api": "dts dev",
-    "postdownload-api": "dts main",
+    "download-api": "npx @vscode/dts dev",
+    "postdownload-api": "npx @vscode/dts main",
     "postinstall": "bun run download-api",
     "compile": "bun build --outdir ./dist --target=node --external=vscode --sourcemap=linked --format=cjs ./src/extension.ts",
     "check-types": "tsgo --noEmit",
@@ -127,6 +127,7 @@
     "@aws-sdk/protocol-http": "^3.374.0",
     "@smithy/shared-ini-file-loader": "^4.3.3",
     "@smithy/util-retry": "^4.2.3",
+    "bun": "^1.3.2",
     "smithy-node-native-fetch": "^1.2.1"
   },
   "devDependencies": {
@@ -141,7 +142,7 @@
     "@types/node": "22.19.1",
     "@types/vscode": "1.104.0",
     "@typescript/native-preview": "7.0.0-dev.20251117.1",
-    "@vscode/dts": "0.4.1",
+    "@vscode/dts": "^0.4.1",
     "@vscode/test-cli": "0.0.12",
     "@vscode/test-electron": "2.5.2",
     "commitlint": "20.1.0",
